<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        style="@style/titre"
        android:text="Menu Generale">

    </TextView>

    <Button
        android:id="@+id/btn1"
        style="@style/btn"
        android:onClick="affiche"
        android:text="@string/btn1"
        android:layout_marginTop="30dp"/>

    <Button
        style="@style/btn"
        android:id="@+id/btn2"
        android:text="@string/btn2"
        android:onClick="affiche"/>
    <Button
        style="@style/btn"
        android:id="@+id/btn3"
        android:text="@string/btn3"
        android:onClick="affiche"/>
</LinearLayout>